style blog + equipe (a moitie) + aide

--- a/Principal/aide.html
+++ b/Principal/aide.html
@@ -61,22 +61,107 @@
     <div id="aide" class="aide">
         <div class="container">
             <div class="row">
+                <div class="col-md-12">
+                    <div class="titlepage">
+                        <h3>Questions fréquentes</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <div class="faq">
+                    <h2>Votre compte</h2>
+                    <br>
+                    <div>
+                        <a href="#CollapseCompte" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseCompte">Pourquoi devez vous avoir un compte ?</a>
+                        <section id="CollapseCompte" class="collapse">
+                            <div class="colCompte">Créer un compte vous permettra d'avoir accès à toutes nos fonctionnalités. Etant
+                                un réseau social, un compte vous permet de sécuriser vos informations afin de pouvoir partager vos idées
+                                avec amis ou plus !
+                            </div>
+                        </section>
+                    </div>
+
+                    <br>
+
+                    <div>
+                        <a href="#CollapseCreer" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseCreer">Comment se créer un compte ?</a>
+                        <section id="CollapseCreer" class="collapse">
+                            <div class="colCompte">
+                                <p>La création d'un compte est très simple. Cliquez sur le bouton en haut à droite et sélectionner
+                                    le bouton "Inscription" <br> Vous pouvez liez votre compte avec votre adresse email.</p>
+                                <p>
+                                    <br><strong>COMMENT FAIRE ? </strong><br>
+                                    1. Entrez votre adresse email, votre nom, votre prénom et créer un mot de passe.
+                                    <br>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">
+                                        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                                    </svg>
+                                    Vous ne pouvez pas utilisez 2 fois la même adresse email. Vérifiez bien votre adresse email avant de valider ! <br>
+                                    2. Appuyez sur le bouton "Créer mon compte" <br>
+                                    3. Réjouissez-vous, vous faites désormais du miappies world !!
+                                </p>
+                            </div>
+                        </section>
+                    </div>
+
+                    <br>
+
+                    <div>
+                        <a href="#Collapsedeco" data-toggle="collapse" aria-expanded="false" aria-controls="Collapsedeco">Comment se déconnecter de son compte?</a>
+                        <section id="Collapsedeco" class="collapse">
+                            <div class="colCompte">
+                                <p>Vous voulez vous déconnecter de votre compte ? Rien de plus simple !</p>
+                                <br>
+                                <p>
+                                    1. Regardez la barre de navigation <br>
+                                    2. Cliquez sur le bouton "déconnexion" <br>
+                                    3. Je vous avais bien dit que c'était facile voyons!!
+                                </p>
+                            </div>
+                        </section>
+                    </div>
+
+                    <br>
+
+                    <div>
+                        <a href="#Collapsesup" data-toggle="collapse" aria-expanded="false" aria-controls="Collapsesup">Comment supprimer son compte ?</a>
+                        <section id="Collapsesup" class="collapse">
+                            <div class="colCompte">
+                                <p>Oh malheur, tristesse...un soldat à terrreeeee! <br>Trèves de plaisanteries, comment supprimer son compte ?</p>
+                                <br>
+                                <p>
+                                    1. Ouvrez la barre de navigation <br>
+                                    2. Cliquez sur le bouton "Mon profil" <br>
+                                    3. Ouvrer les paramètres de comptes <br>
+                                    4. Cliquez sur le bouton "Supprimer mon compte"<br>
+                                    Votre compte sera supprimé sous 30 jours (On est triste mais bon...)
+                                </p>
+                            </div>
+                        </section>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="row">
               <div class="col-md-12">
                  <div class="titlepage">
                     <h3>Besoin d'aide ?</h3>
                  </div>
               </div>
             </div>
+
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="contact">
-                    <h3>Contact Us</h3>
+                    <h3>Contactez-nous !</h3>
                 <form>
                     <div class="row">
                         <div class="col-sm-12">
-                            <input class="contactus" placeholder="Name" type="text" name="Name">
+                            <input class="contactus" placeholder="Nom" type="text" name="Name">
                         </div>
                         <div class="col-sm-12">
-                            <input class="contactus" placeholder="Phone" type="text" name="Email">
+                            <input class="contactus" placeholder="Numéro" type="text" name="Email">
                         </div>
                         <div class="col-sm-12">
                             <input class="contactus" placeholder="Email" type="text" name="Email">
@@ -85,7 +170,7 @@
                             <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
                         </div>
                         <div class="col-sm-12">
-                            <button class="send">Send</button>
+                            <button class="send">Envoyer</button>
                         </div>
                     </div>
                 </form>
