--- a/Principal/blog.html
+++ b/Principal/blog.html
@@ -69,17 +69,19 @@
                 </div>
             </div>
 
-            <div class="row pb-5">
-                <img class="imgBlog img-fluid" src="image/houmous.jpg" alt="Houmous">
-                <h4>Date: 3 septembre 2020</h4>
-                <h4>Tintamarre on en a pas marre !</h4>
+            <div>
+                <div class="row">
+                    <img class="imgBlog img-fluid" src="image/houmous.jpg" alt="Houmous">
+                </div>
+                <h4><strong>Date: 3 septembre 2020</strong></h4>
+                <h4><strong>Tintamarre on en a pas marre !</strong></h4>
                 <div>
-                    <a href="#CollapseTinta" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTinta">En lire plus</a>
+                  <i><a href="#CollapseTinta" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTinta">En lire plus</a></i>
                     <section id="CollapseTinta" class="collapse">
                         <div class="colBlog">
-                            <p>Aux manettes de Tintamarre, Gabrielle Beck, une ex architecte, designer, qui n’a rien laissé au hasard lors de sa reconversion en se formant chez Lenôtre. Chez Tintamarre, elle partage son amour pour la cuisine libanaise à travers ses souvenirs d’enfance et son savoir-faire. À l’entrée des pots de légumes en saumure et Gabrielle qui fait son mélange pour le zaatar.
-                                <br>
-                                Dans nos assiettes ?
+                            <p><br>Aux manettes de Tintamarre, Gabrielle Beck, une ex architecte, designer, qui n’a rien laissé au hasard lors de sa reconversion en se formant chez Lenôtre. Chez Tintamarre, elle partage son amour pour la cuisine libanaise à travers ses souvenirs d’enfance et son savoir-faire. À l’entrée des pots de légumes en saumure et Gabrielle qui fait son mélange pour le zaatar.
+                                <br><br><strong>
+                                Dans nos assiettes ?</strong>
                                 <br>
                                 Hoummous : Purée de pois-chiche à la tahina et au citron.
                                 <br>
@@ -92,10 +94,10 @@
                                 Moudardara et son œuf parfait : lentilles au riz parfumé au cumin et relevé au piment, fondue de chou rouge.
                                 <br>
                                 Mandarine pochée et riz au lait au agrumes.<br>Mouhallabieh au chocolat et éclats de pistaches caramélisés.
-                                <br><b>C’est combien ?</b><br>Plats : 14,50€.<br>Menu déjeuner Entrée + plat ou Plat + dessert : 16,50€<br>
+                                <br><br><b>C’est combien ?</b><br>Plats : 14,50€.<br>Menu déjeuner Entrée + plat ou Plat + dessert : 16,50€<br>
                                 Sandwich kefta : 7,50€ / Sandwich veggie : 6,50€. (10€ avec une entrée).
                 
-                                <br>
+                                <br><br>
                                 <b>C'est excellent alors foncez !!</b>
                             </p>
                         </div>
@@ -105,25 +107,30 @@
 
             <hr class="separation">
 
-            <div class="row pb-5">
-                <img class="imgBlog" src="image/arepas.jpg" alt="Arepas Venezuela">
-                <h4>Date: 18 juillet 2020 </h4>
-                <h4>Aji Dulce, La vie douce en approche ! </h4>
+            <div>
+                <div class="row">
+                    <img class="imgBlog" src="image/arepas.jpg" alt="Arepas Venezuela">
+                </div>
+                <h4><strong>Date: 18 juillet 2020 </strong></h4>
+                <h4><strong>Aji Dulce, La vie douce en approche ! </strong></h4>
                 <div>
-                    <a href="#CollapseArepa" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseArepa">En lire plus</a>
+                   <i> <a href="#CollapseArepa" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseArepa">En lire plus</a></i>
                     <section id="CollapseArepa" class="collapse">
                         <div class="colBlog">
                             <p>C’est un food truck et un restaurant vénézuélien qui fait la part belle à la spécialité la plus emblématique de la street food vénézuélienne : les arepas. Des galettes de maïs blanc, souvent garnie. Ici, elles sont cuites minute au four, et sont servies chaudes et croustillantes, et garnies à votre convenance, à choisir entre 9 recettes.
                                 <br>
                                 Aji Dulce compte un food truck qui se déplace et dont on peut suivre les emplacements sur leur site et réseaux sociaux, et une petite échoppe avec quelques places assises, dans le 9ème, à Saint-Georges.
-                                <br>
-                                Dans nos assiettes ?<br>Tequenos : beignets au fromage frais vénézuélien
+                                <br><br><strong>Dans nos assiettes ?</strong>
+                                <br>Tequenos : beignets au fromage frais vénézuélien
                                 <br>Arepa Pelua : boeuf effiloché mijoté dans une sauce légumes, fromage gouda.
                                 <br>Arepa Catira : poulet rôti effiloché mijoté dans notre sauce légumes, fromage amarillo (gouda)
                                 <br>Arepa Queso : fromage frais vénézuélien, avocat frais, banane plantain frite.
                                 <br>Tostones : chips de banane plantain verte légèrement salés et fromage frais vénézuélien.
-                                <br><b>C’est combien ?</b><br>Arepas : 10,50€
-                                <br>Menu déj 13,50€ : Arepa + 2 sauces + entrée, dessert ou jus maison
+                                <br><br>
+                                <strong>C’est combien ?</strong>
+                                <br>Arepas : 10,50€
+                                <br>Menu déj 13,50€ : Arepa + 2 sauces + entrée, dessert ou jus maison<br>
+                                <br><strong>Mettez du piment dans votre vie !</strong>
                             </p>
                         </div>
                     </section>
@@ -132,24 +139,29 @@
 
             <hr class="separation">
 
-            <div class="row pb-5">
-                <img class="imgBlog" src="image/platAsie.jpg" alt="Plat Asiatique">
-                <h4>Date: 1 janvier 2020</h4>
-                <h4>La brigade du tigre, gare aux représailles !</h4>
+            <div>
+                <div class="row">
+                    <img class="imgBlog" src="image/platAsie.jpg" alt="Plat Asiatique">
+                </div>
+                <h4><strong>Date: 1 janvier 2020</strong></h4>
+                <h4><strong>La brigade du tigre, gare aux représailles !</strong></h4>
                 <div>
-                    <a href="#CollapseTigre" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTigre">En lire plus</a>
+                    <i><a href="#CollapseTigre" data-toggle="collapse" aria-expanded="false" aria-controls="CollapseTigre">En lire plus</a></i>
                     <section id="CollapseTigre" class="collapse">
                         <div class="colBlog">
                             <p>
                                 La Brigade du Tigre, c’est le second restaurant d’Adrien Ferrand, à quelques pas du premier Eels, rue du Faubourg Poissonnière. Le pari ? Un voyage aux quatre coins de l’Asie, de la Thaïlande au Sri-Lanka, des incontournables de la street food aux spécialités traditionnelles, opéré par le chef Galien Emery.
-                                <br>
-                                <b>Dans nos assiettes ?</b><br>3 menus déjeuner entrée-plat-dessert<br>
+                                <br><br>
+                                <strong>Dans nos assiettes ?</strong>
+                                <br>3 menus déjeuner entrée-plat-dessert<br>
                                 Rouleau d’automne – miso rouge<br>Crab Cake – mayo piment<br>Raviolis grillés de champignons – Tom Kha pommes de terre
                                 <br>Tataki de boeuf de Galice – black beans<br>Merlu – chou pointu grillé – combawa gingembre
                                 <br>Poitrine de cochon confite et laquée – légumes verts – riz sauté<br>Mango sticky rice
-                                <br>Cake coco caramélisé – caramel cacahuète<br>
-                                <b>C’est combien ?</b><br>Entrée – plat -dessert : 23€ // Entrée – plat ou plat – dessert : 19€
-                                <br>
+                                <br>Cake coco caramélisé – caramel cacahuète<br><br>
+                                <strong>C’est combien ?</strong>
+                                <br>Entrée – plat -dessert : 23€ // Entrée – plat ou plat – dessert : 19€
+                                <br><br>
+                                <strong>Avec ça on a une faim de loup ! (enfin de tigre ça le fait mieux) </strong>
                             </p>
                         </div>
                     </section>
