--- a/Principal/equipe.html
+++ b/Principal/equipe.html
@@ -17,48 +17,53 @@
     <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
 </head>
 <body class="main-layout">
-   <header>
-      <!-- header inner -->
-      <div class="header">
-         <div class="container">
+<header>
+    <!-- header inner -->
+    <div class="header">
+        <div class="container">
             <div class="row">
-               <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                  <div class="full">
-                     <div class="center-desk">
-                        <div class="logo"> <a href="index.html"><img src="./image/miap_fond.png" alt="Logo" class="img-fluid" id=logo></a></div>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
-                  <div class="menu-area">
-                     <div class="limit-box">
-                        <nav class="main-menu">
-                           <ul class="menu-area-main">
-                              <li> <a href="./blog.html"> Blog</a> </li>
-                              <li> <a href="./equipe.html">L'équipe</a> </li>
-                              <li> <a href="./aide.html">Contactez-nous</a> </li>
-                              <li>
-                                 <form name="x" action="./index.php?controle=connexion&action=connexion" method="post">
-                                    <button id="connect" type="submit" class="btn-link nav-link">Se Connecter</button>
-                                 </form>                    
-                              </li>
-                              <li>
-                                 <form name="x" action="./index.php?controle=inscription&action=affins" method="post">
-                                    <button id="login" type="submit" class="btn-link nav-link">Inscription</button>
-                                 </form> 
-                              </li>                               
-                              <li>                                 
-                              </li>
-                           </ul>
-                        </nav>
-                     </div>
-                  </div>
-               </div>
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                    <div class="full">
+                        <div class="center-desk">
+                            <div class="logo"> <a href="index.html"><img src="./image/miap_fond.png" alt="Logo" class="img-fluid" id="logo"></a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                    <div class="menu-area">
+                        <div class="limit-box">
+                            <nav class="main-menu">
+                                <ul class="menu-area-main">
+                                    <li> <a href="./equipe.html">A propos</a>
+                                        <ul class="menu-area-main">
+                                            <li>Présentation du projet</li>
+                                            <li>Notre équipe</li>
+                                        </ul>
+                                    </li>
+                                    <li> <a href="./blog.html"> Blog</a> </li>
+                                    <li> <a href="./aide.html">Aide & Contact</a> </li>
+                                    <li>
+                                        <form name="x" action="./index.php?controle=connexion&action=connexion" method="post">
+                                            <button type="submit" class="btn-link nav-link">Se Connecter</button>
+                                        </form>
+                                    </li>
+                                    <li>
+                                        <form name="x" action="./index.php?controle=inscription&action=affins" method="post">
+                                            <button id="login" type="submit" class="btn-link nav-link">Inscription</button>
+                                        </form>
+                                    </li>
+                                    <li>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-      </div>
-      <!-- end header inner --> 
-   </header>
+        </div>
+    </div>
+    <!-- end header inner -->
+</header>
 
     <div class="contenu">
         <div class="container">
@@ -70,19 +75,38 @@
                     </div>
                 </div>
             </div>
+
             <div class="row">
-                <div class="col-md"><h1>Hassina AYACHI : PDG</h1></div>
+                <div class="col-md-12">
+                    <div class="video-pre">
+                        <iframe width="980" height="551,25" src="https://www.youtube.com/embed/xCXohLWzA_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+
+            <hr><br>
+            <div class="row">
+                <div class="col-md-6"><h1>Hassina AYACHI : PDG</h1></div>
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hassina.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>La meuf si populaire qu'elle est devenue CEO.</p></div>
+                <div class="col-md text-center"><p>Our very own CEO, she’s the one who’s in charge of managing us (and kicking our butts) and handling the project management such as the planning, giving tasks, making sure we are on schedule, handling the competitive analysis.
+                    She is our spokesperson, you might have seen her in our videos.
+                    Not only she is our CEO but she is the director and video editor behind our videos.
+                    She is also the one who overviews every designs. Finally, she is the one who translated our wonderful website.
+                    PS: she always brings food for everyone ^^</p>
+                </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col-md"><h1>Moïna VALMY : Développeuse web</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"><p>La meuf avec les talons si bruyant qu'on dirait une prof.</p></div>
+                <div class="col-md text-center"><p>
+                    We introduce the first web developper: Moïna. She is our calm and competent asset.
+                    She handled the visual aspect of the website.
+                    She is also good at multitasking since she helped with the competitive analysis.</p>
+                </div>
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/moina.png" alt="logo" style="width:300px;"></div>
             </div>
             <hr>
@@ -91,14 +115,20 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/mehdi.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p class="text-center">Le gars qui sait pas écrire son nom.</p></div>
+                <div class="col-md text-center"><p>Here comes the second web developper: Mehdi. He is lively and cheerful, always brights up the mood BUT he is always late.
+                    He handled the visual aspect of the website. He is good at multitasking as well since he took part in the competitive analysis.
+                    Mehdi is also our very own Community manager so don’t hesitate to interact with him on social media</p>
+                </div>
             </div>
             <hr>
             <div class="row">
                 <div class="col-md"><h1>Quentin DARTY : Développeur</h1></div>
             </div></br>
             <div class="row">
-                <div class="col-md text-center"><p>Le gars qui n'est pas là même quand il est là.</p></div>
+                <div class="col-md text-center"><p>Quentin is like the quiet kid in the back of the class. He is discret at first but more outgoing if you get to know him.
+                    He is very creative, that’s why he was in charge of every design.
+                    He designed the graphic charter of the website but also the future app.</p>
+                </div>
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/Quentin.png" alt="logo" style="width:300px;"></div>
             </div></br>
             <hr>
@@ -107,7 +137,9 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/hubert.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>Le gars le plus sérieux mais qui est surtout sur genshin impact.</p></div>
+                <div class="col-md text-center"><p>Hubert is the cool kid. He’s very outgoing and can get along with anyone. It’s always a pleasure working with him since he lights up the mood.
+                    He is also very talented since he is the one currently coding our website but also our incoming app.</p>
+                </div>
             </div>
             <hr>
             <div class="row">
@@ -123,55 +155,53 @@
             </div></br>
             <div class="row">
                 <div class="col-md text-center"> <img class="myPhoto" class="img-fluid text-center" src="image/janik.png" alt="logo" style="width:300px;"></div>
-                <div class="col-md text-center"><p>idk yet.</p></div>
+                <div class="col-md text-center"><p>Janik is like the quiet kid in front of the class. He is smart and has a great sense of logic</p></div>
             </div>
         </div>
     </div>
 
-    <footer>
-      <div class="footer pb-5">
-         <div class="container">
+<div id="scroll_to_top">
+    <a href="#top"><img src="image/scroll.png" alt="Retourner en haut" /></a>
+</div>
+
+<footer>
+    <div class="footer pb-5">
+        <div class="container">
             <div class="row">
-               <div class="col-lg-3 col-md-6 col-sm-12 width">
-                  <div class="address">
-                     <h3>Adresse</h3>
-                     <i><img src="icon/3.png">143 Avenue de Versailles, 75016 Paris</i>                        
-                  </div>
-               </div>
-               <div class="col-lg-2 col-md-6 col-sm-12 width">
-                  <div class="address">
-                     <h3>Menus</h3>
-                     <i><img src="icon/2.png">Locations</i>
-                  </div>
-               </div>
-               <div class="col-lg-2 col-md-6 col-sm-12 width">
-                  <div class="address">
-                     <h3>Liens Utiles</h3>
-                     <i><img src="icon/1.png">Locations</i>
-                  </div>
-               </div>
-               <div class="col-lg-2 col-md-6 col-sm-12 width">
-                  <div class="address">
-                     <h3>Réseaux Sociaux </h3>
-                     <ul class="contant_icon">
-                        <!--<li><img src="icon/fb.png" alt="icon"/></li>-->
-                        <li><a href="https://twitter.com/Miap09882942"><img src="icon/tw.png" alt="icon"/></a></li>
-                        <!--<li><img src="icon/lin (2).png" alt="icon"/></li>-->
-                        <li><a href="https://www.instagram.com/miapies_world/"><img src="icon/instagram.png" alt="icon"/></a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 width">
-                  <div class="address">
-                     <h3>Newsletter </h3>
-                     <input class="form-control" placeholder="Entrez votre mail" type="type" name="Enter your email">
-                     <button class="submit-btn">S'inscrire</button>
-                  </div>
-               </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 width">
+                    <div class="address">
+                        <h3>Adresse</h3>
+                        <p><img src="icon/3.png">143 Avenue de Versailles, 75016 Paris</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 width">
+                    <div class="address">
+                        <h3>Menu</h3>
+                        <p><a href="./blog.html">Blog</a></p>
+                        <p><a href="./equipe.html">A propos</a></p>
+                        <p><a href="./aide.html">Aide & Contact</a></p>
+                        <p><a href="#">Connexion</a></p>
+                        <p><a href="#">Inscription</a></p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 width">
+                    <div class="address">
+                        <h3>Réseaux Sociaux </h3>
+                        <div class="contant_icon">
+                            <!--<li><img src="icon/fb.png" alt="icon"/></li>-->
+                            <p><a href="https://twitter.com/Miap09882942"><img src="icon/tw.png" alt="icon"/></a>
+                                @MiapO9882942</p>
+                            <br>
+                            <!--<li><img src="icon/lin (2).png" alt="icon"/></li>-->
+                            <p><a href="https://www.instagram.com/miapies_world/"><img src="icon/instagram.png" alt="icon"/></a>
+                                @miapies_world</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-      </div>
-   </footer>
+        </div>
+    </div>
+</footer>
     <!-- Javascript files--> 
     <script src="js/jquery.min.js"></script> 
     <script src="js/popper.min.js"></script> 
