--- a/Principal/index.html
+++ b/Principal/index.html
@@ -46,9 +46,14 @@
                         <div class="limit-box">
                            <nav class="main-menu">
                               <ul class="menu-area-main">
+                                 <li> <a href="./equipe.html">A propos</a>
+                                    <ul class="menu-area-main">
+                                       <li>Présentation du projet</li>
+                                       <li>Notre équipe</li>
+                                    </ul>
+                                 </li>
                                  <li> <a href="./blog.html"> Blog</a> </li>
-                                 <li> <a href="./equipe.html">L'équipe</a> </li>
-                                 <li> <a href="./aide.html">Contactez-nous</a> </li>
+                                 <li> <a href="./aide.html">Aide & Contact</a> </li>
                                  <li>
                                     <form name="x" action="./index.php?controle=connexion&action=connexion" method="post">
                                        <button type="submit" class="btn-link nav-link">Se Connecter</button>
@@ -81,7 +86,7 @@
                      <div class="carousel-caption relative">
                         <h1>Miap</h1>
                         <p> Partagez vos meilleurs restaurants avec vos amis </p>
-                        <a  href="./index.php?controle=connexion&action=connexion">Commencez dès maintenant !</a>
+                        <a  href="./index.php?controle=inscription&action=affins">Commencez dès maintenant !</a>
                      </div>
                   </div>
                </div>
@@ -101,8 +106,8 @@
                            Dans l'espérance d’un déconfinement et d’un retour à la normale,
                             nous souhaitons préparer nos retours dans les restaurants de nos rêves.
                              En se réunissant autour de notre passion commune qu’est la nourriture,
-                              nous avons pris la décision de créer un site internet collaboratif: Miap.
-                               Pourquoi avons-nous choisi Miap ? Miap est la contraction de Miam et de Map tout simplement.
+                              nous avons pris la décision de créer un site internet collaboratif: <strong>Miap.</strong>
+                               <br>Pourquoi avons-nous choisi Miap ? Miap est la contraction de Miam et de Map tout simplement.
                                 Nous souhaitons utiliser une carte dans le but de créer une communauté de Miapies
                                  qui apporteraient leur contribution à notre projet en partageant leurs bonnes adresses.
                                   Cette communauté sera réunie sur notre réseau social et pourra ainsi interagir par le biais
@@ -169,6 +174,9 @@
             </div>
          </div>
       </div>
+      <div id="scroll_to_top">
+         <a href="#top"><img src="image/scroll.png" alt="Retourner en haut" /></a>
+      </div>
       <!-- end service -->
       <!-- Download -->
       <!--<div class="contenu">
@@ -195,40 +203,34 @@
          <div class="footer pb-5">
             <div class="container">
                <div class="row">
-                  <div class="col-lg-3 col-md-6 col-sm-12 width">
+                  <div class="col-lg-4 col-md-6 col-sm-12 width">
                      <div class="address">
                         <h3>Adresse</h3>
-                        <i><img src="icon/3.png">143 Avenue de Versailles, 75016 Paris</i>                        
+                        <p><img src="icon/3.png">143 Avenue de Versailles, 75016 Paris</p>
                      </div>
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-12 width">
+                  <div class="col-lg-4 col-md-6 col-sm-12 width">
                      <div class="address">
-                        <h3>Menus</h3>
-                        <i><img src="icon/2.png">Locations</i>
+                        <h3>Menu</h3>
+                        <p><a href="./blog.html">Blog</a></p>
+                        <p><a href="./equipe.html">A propos</a></p>
+                        <p><a href="./aide.html">Aide & Contact</a></p>
+                        <p><a href="#">Connexion</a></p>
+                        <p><a href="#">Inscription</a></p>
                      </div>
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-12 width">
-                     <div class="address">
-                        <h3>Liens Utiles</h3>
-                        <i><img src="icon/1.png">Locations</i>
-                     </div>
-                  </div>
-                  <div class="col-lg-2 col-md-6 col-sm-12 width">
+                  <div class="col-lg-4 col-md-6 col-sm-12 width">
                      <div class="address">
                         <h3>Réseaux Sociaux </h3>
-                        <ul class="contant_icon">
+                        <div class="contant_icon">
                            <!--<li><img src="icon/fb.png" alt="icon"/></li>-->
-                           <li><a href="https://twitter.com/Miap09882942"><img src="icon/tw.png" alt="icon"/></a></li>
+                           <p><a href="https://twitter.com/Miap09882942"><img src="icon/tw.png" alt="icon"/></a>
+                           @MiapO9882942</p>
+                           <br>
                            <!--<li><img src="icon/lin (2).png" alt="icon"/></li>-->
-                           <li><a href="https://www.instagram.com/miapies_world/"><img src="icon/instagram.png" alt="icon"/></a></li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 width">
-                     <div class="address">
-                        <h3>Newsletter </h3>
-                        <input class="form-control" placeholder="Entrez votre mail" type="type" name="Enter your email">
-                        <button class="submit-btn">S'inscrire</button>
+                           <p><a href="https://www.instagram.com/miapies_world/"><img src="icon/instagram.png" alt="icon"/></a>
+                           @miapies_world</p>
+                        </div>
                      </div>
                   </div>
                </div>
